plugins/javaFX/testData/highlighting/sourceAttrRecognition.fxml
<?import javafx.scene.layout.GridPane?>
<?import javafx.scene.image.*?>
<GridPane xmlns:fx="http://javafx.com/fxml">
  <ImageView>
    <image>
      <fx:reference source="myImage"/>
    </image>
  </ImageView>
  <fx:include source="<error descr="Cannot resolve file 'my_button.fxml'">my_button.fxml</error>"/>
</GridPane>
